Signed-off-by: StevenShaoYY <635178917@qq.com>

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,6 +11,6 @@
 	<header>
 		<navigation></navigation>
 	</header>
-  	<div ng-view class="main-content"></div>	
+  	<div ng-view class="main-content clearfix"></div>	
 </body>
 </html>
